fixed horizontal scroll bar issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
+html,
 body {
   overflow-x: hidden;
+}
+body {
+  position: relative;
 }
 h1,
 h2,
